--- a/src/main/resources/templates/views/row/htmlFortmat.html
+++ b/src/main/resources/templates/views/row/htmlFortmat.html
@@ -12,14 +12,14 @@
 
     <title>main</title>
 
-    <!-- Custom fonts for this template 필수! -->
-    <link href="../../static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <!-- Custom fonts for this template -->
+    <link href="../../../static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
 
     <!-- Custom styles for this template 필수! -->
-    <link href="../../static/css/sb-admin-2.min.css" rel="stylesheet">
+    <link href="../../../static/css/sb-admin-2.min.css" rel="stylesheet">
 
 </head>
 
@@ -32,7 +32,7 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="../index.html">
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-capsules"></i>
 <!--                    <i class="fas fa-laugh-wink"></i>-->
@@ -45,7 +45,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
-                <a class="nav-link" href="index.html">
+                <a class="nav-link" href="../index.html">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Dashboard</span></a>
             </li>
@@ -68,8 +68,8 @@
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Custom Components:</h6>
-                        <a class="collapse-item" href="../../static/buttons.html">Buttons</a>
-                        <a class="collapse-item" href="../../static/cards.html">Cards</a>
+                        <a class="collapse-item" href="../../../static/buttons.html">Buttons</a>
+                        <a class="collapse-item" href="../../../static/cards.html">Cards</a>
                     </div>
                 </div>
             </li>
@@ -85,10 +85,10 @@
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Custom Utilities:</h6>
-                        <a class="collapse-item" href="../../static/utilities-color.html">Colors</a>
-                        <a class="collapse-item" href="../../static/utilities-border.html">Borders</a>
-                        <a class="collapse-item" href="../../static/utilities-animation.html">Animations</a>
-                        <a class="collapse-item" href="../../static/utilities-other.html">Other</a>
+                        <a class="collapse-item" href="../../../static/utilities-color.html">Colors</a>
+                        <a class="collapse-item" href="../../../static/utilities-border.html">Borders</a>
+                        <a class="collapse-item" href="../../../static/utilities-animation.html">Animations</a>
+                        <a class="collapse-item" href="../../../static/utilities-other.html">Other</a>
                     </div>
                 </div>
             </li>
@@ -111,27 +111,27 @@
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Login Screens:</h6>
-                        <a class="collapse-item" href="../../static/login.html">Login</a>
-                        <a class="collapse-item" href="../../static/register.html">Register</a>
-                        <a class="collapse-item" href="../../static/forgot-password.html">Forgot Password</a>
+                        <a class="collapse-item" href="../../../static/login.html">Login</a>
+                        <a class="collapse-item" href="../../../static/register.html">Register</a>
+                        <a class="collapse-item" href="../../../static/forgot-password.html">Forgot Password</a>
                         <div class="collapse-divider"></div>
                         <h6 class="collapse-header">Other Pages:</h6>
-                        <a class="collapse-item" href="../../static/404.html">404 Page</a>
-                        <a class="collapse-item" href="../../static/blank.html">Blank Page</a>
+                        <a class="collapse-item" href="../../../static/404.html">404 Page</a>
+                        <a class="collapse-item" href="../../../static/blank.html">Blank Page</a>
                     </div>
                 </div>
             </li>
 
             <!-- Nav Item - Charts -->
             <li class="nav-item">
-                <a class="nav-link" href="../../static/charts.html">
+                <a class="nav-link" href="../../../static/charts.html">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>Charts</span></a>
             </li>
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="../../static/tables.html">
+                <a class="nav-link" href="../../../static/tables.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Tables</span></a>
             </li>
@@ -276,7 +276,7 @@
                                 </h6>
                                 <a class="dropdown-item d-flex align-items-center" href="#">
                                     <div class="dropdown-list-image mr-3">
-                                        <img class="rounded-circle" src="../../static/img/undraw_profile_1.svg"
+                                        <img class="rounded-circle" src="../../../static/img/undraw_profile_1.svg"
                                             alt="...">
                                         <div class="status-indicator bg-success"></div>
                                     </div>
@@ -288,7 +288,7 @@
                                 </a>
                                 <a class="dropdown-item d-flex align-items-center" href="#">
                                     <div class="dropdown-list-image mr-3">
-                                        <img class="rounded-circle" src="../../static/img/undraw_profile_2.svg"
+                                        <img class="rounded-circle" src="../../../static/img/undraw_profile_2.svg"
                                             alt="...">
                                         <div class="status-indicator"></div>
                                     </div>
@@ -300,7 +300,7 @@
                                 </a>
                                 <a class="dropdown-item d-flex align-items-center" href="#">
                                     <div class="dropdown-list-image mr-3">
-                                        <img class="rounded-circle" src="../../static/img/undraw_profile_3.svg"
+                                        <img class="rounded-circle" src="../../../static/img/undraw_profile_3.svg"
                                             alt="...">
                                         <div class="status-indicator bg-warning"></div>
                                     </div>
@@ -334,7 +334,7 @@
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="mr-2 d-none d-lg-inline text-gray-600 small">Douglas McGee</span>
                                 <img class="img-profile rounded-circle"
-                                    src="../../static/img/undraw_profile.svg">
+                                    src="../../../static/img/undraw_profile.svg">
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
@@ -363,6 +363,159 @@
 
                 </nav>
                 <!-- End of Topbar -->
+
+                <div class="d-sm-flex align-items-center justify-content-between mb-4 px-1">
+                    <h1 class="h3 mb-0 text-gray-800">Search My Medicine Information</h1>
+                </div>
+
+                <form class="d-flex w-50 mb-2 px-1">
+                    <input class="form-control me-sm-2" type="search" placeholder="Search">
+                    <button class="btn btn-secondary my-2 mx-1 my-sm-0" type="submit">Search</button>
+                </form>
+<script>
+
+    var api_key = "qldguqvXIu42xCDyOSTvTu%2BnmFiLjCH4ZUymYcnYP1bKYMt0XyZtC0PD%2Betdt%2Bn9Ylp5NRWM1%2Bpax7%2BjZZ6kow%3D%3D"
+
+    function loadData(){
+let itemName = document.getElementById('itemName').value.trim();
+let entpName = document.getElementById('entpName').value.trim();
+let efcyQesitm = document.getElementById('efcyQesitm').value.trim();
+let depositMethodQesitm = document.getElementById('depositMethodQesitm').value.trim();
+let url = `https://apis.data.go.kr/1471000/DrbEasyDrugInfoService/getDrbEasyDrugList?serviceKey=${api_key}&pageNo=1&numOfRows=100&type=json`
+        fetch(url)
+            .then(response => response.json())
+            .then(jsonObj => parseJSON(jsonObj))
+        ;
+    } // end of loadData()
+
+    function parseJSON(jsonObj){
+        const table = [];
+        table.push()
+    }
+
+</script> <!-- end of script-->
+                <table class="table table-hover mt-3-2">
+                    <thead>
+                    <tr>
+                        <th scope="col">제품명</th>
+                        <th scope="col">업체명</th>
+                        <th scope="col">품목기준코드</th>
+                        <th scope="col">약의 효능</th>
+                        <th scope="col">보관방법</th>
+                        <th scope="col">More</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr class="table-primary" style="background-color: #a3b6ee">
+                        <th scope="row" class="align-middle">Primary</th>
+                        <td class="align-middle">Column content</td>
+                        <td class="align-middle">Column content</td>
+                        <td class="align-middle">Column content</td>
+                        <td class="align-middle">Column content</td>
+                        <td class="align-middle text-center"><i class="fas fa-search-plus" style="color: #0056d6;"></i></td>
+                    </tr>
+                    <tr>
+                        <th scope="row" class="align-middle">Default</th>
+                        <td class="align-middle">Column content</td>
+                        <td class="align-middle">Column content</td>
+                        <td class="align-middle">Column content</td>
+                        <td class="align-middle">Column content</td>
+                        <td class="align-middle text-center"><i class="fas fa-search-plus" style="color: #0056d6;"></i></td>
+                    </tr>
+                    <tr class="table-primary" style="background-color: #a3b6ee">
+                        <th scope="row">Primary</th>
+                        <td>Column content</td>
+                        <td>Column content</td>
+                        <td>Column content</td>
+                        <td>Column content</td>
+                        <td><i class="fas fa-search-plus" style="color: #0056d6;"></i></td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Default</th>
+                        <td>Column content</td>
+                        <td>Column content</td>
+                        <td>Column content</td>
+                        <td>Column content</td>
+                        <td><i class="fas fa-search-plus" style="color: #0056d6;"></i></td>
+                    </tr>
+                    <tr class="table-primary" style="background-color: #a3b6ee">
+                        <th scope="row">Primary</th>
+                        <td>Column content</td>
+                        <td>Column content</td>
+                        <td>Column content</td>
+                        <td>Column content</td>
+                        <td><i class="fas fa-search-plus" style="color: #0056d6;"></i></td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Default</th>
+                        <td>Column content</td>
+                        <td>Column content</td>
+                        <td>Column content</td>
+                        <td>Column content</td>
+                        <td><i class="fas fa-search-plus" style="color: #0056d6;"></i></td>
+                    </tr>
+                    <tr class="table-primary" style="background-color: #a3b6ee">
+                        <th scope="row">Primary</th>
+                        <td>Column content</td>
+                        <td>Column content</td>
+                        <td>Column content</td>
+                        <td>Column content</td>
+                        <td><i class="fas fa-search-plus" style="color: #0056d6;"></i></td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Default</th>
+                        <td>Column content</td>
+                        <td>Column content</td>
+                        <td>Column content</td>
+                        <td>Column content</td>
+                        <td><i class="fas fa-search-plus" style="color: #0056d6;"></i></td>
+                    </tr>
+                    <tr class="table-primary" style="background-color: #a3b6ee">
+                        <th scope="row">Primary</th>
+                        <td>Column content</td>
+                        <td>Column content</td>
+                        <td>Column content</td>
+                        <td>Column content</td>
+                        <td><i class="fas fa-search-plus" style="color: #0056d6;"></i></td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Default</th>
+                        <td>Column content</td>
+                        <td>Column content</td>
+                        <td>Column content</td>
+                        <td>Column content</td>
+                        <td><i class="fas fa-search-plus" style="color: #0056d6;"></i></td>
+                    </tr>
+                    </tbody>
+                </table>
+
+
+                <div>
+                    <ul class="pagination justify-content-center">
+                        <li class="page-item disabled">
+                            <a class="page-link" href="#">&laquo;</a>
+                        </li>
+                        <li class="page-item active">
+                            <a class="page-link" href="#">1</a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link" href="#">2</a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link" href="#">3</a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link" href="#">4</a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link" href="#">5</a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link" href="#">&raquo;</a>
+                        </li>
+                    </ul>
+                </div>
+
 
 <!-- main contents -->
 
@@ -401,28 +554,28 @@
                 <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="../../static/login.html">Logout</a>
+                    <a class="btn btn-primary" href="../../../static/login.html">Logout</a>
                 </div>
             </div>
         </div>
     </div>
 
     <!-- Bootstrap core JavaScript-->
-    <script src="../../static/vendor/jquery/jquery.min.js"></script>
-    <script src="../../static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../../../static/vendor/jquery/jquery.min.js"></script>
+    <script src="../../../static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Core plugin JavaScript-->
-    <script src="../../static/vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="../../../static/vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Custom scripts for all pages-->
-    <script src="../../static/js/sb-admin-2.min.js"></script>
+    <script src="../../../static/js/sb-admin-2.min.js"></script>
 
     <!-- Page level plugins -->
-    <script src="../../static/vendor/chart.js/Chart.min.js"></script>
+    <script src="../../../static/vendor/chart.js/Chart.min.js"></script>
 
     <!-- Page level custom scripts -->
-    <script src="../../static/js/demo/chart-area-demo.js"></script>
-    <script src="../../static/js/demo/chart-pie-demo.js"></script>
+    <script src="../../../static/js/demo/chart-area-demo.js"></script>
+    <script src="../../../static/js/demo/chart-pie-demo.js"></script>
 
 </body>
 
