--- a/src/main/resources/templates/views/index.html
+++ b/src/main/resources/templates/views/index.html
@@ -18,7 +18,7 @@
         rel="stylesheet">
 
     <!-- Custom styles for this template-->
-    <link href="../../static/css/sb-admin-2.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../static/css/sb-admin-2.min.css">
 
 </head>
 
