--- a/src/main/resources/templates/views/common/pagination.html
+++ b/src/main/resources/templates/views/common/pagination.html
@@ -4,9 +4,9 @@
 <th:block th:fragment="pagination">
     <section class="pagination justify-content-center">
         <div>
-            <ul class="pagination pagination">
+            <ul class="pagination">
                 <li class="page-item disabled" th:if="${page > 1}">
-                    <a class="page-link" th:href="${url }" title="처음"><i class='fas fa-angle-double-left'></i></a>
+                    <a class="page-link" th:href="@{${url }(page = 1)}" title="처음"><i class='fas fa-angle-double-left'></i></a>
                 </li>
                 <li class="page-item" th:if="${startPage > 1 }">
                     <a class="page-link" th:href="@{${url }(page=${startPage - 1 })}"><i class='fas fa-angle-left'></i></a>
